--- a/assets/style.css
+++ b/assets/style.css
@@ -125,12 +125,18 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	padding: 0 2rem;
 }
 #banner .arrow_left {
 	left: 10px;
+	cursor: pointer;
 }
 #banner .arrow_right {
 	right: 10px;
+	cursor: pointer;
 }
 /* Gestion des points du carrousel */
 .dots {
