--- a/assets/style.css
+++ b/assets/style.css
@@ -166,6 +166,7 @@ header {
 	color: white;
 	text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 	text-align: center;
+	padding: 6rem;
 }
 #banner span {
 	display: block;
